--- a/GuzalAida/CMakeLists.txt
+++ b/GuzalAida/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
-project(guzald)
+project(GuzalAida)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE})
 
-add_executable(${PROJECT_NAME} "guzald.c")
+add_executable(${PROJECT_NAME} "GuzalAida.c")
 target_link_libraries(${PROJECT_NAME} PRIVATE)
