--- a/GuzalAida/CMakeLists.txt
+++ b/GuzalAida/CMakeLists.txt
@@ -7,4 +7,4 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE}/bin)
 
 
 add_executable(${PROJECT_NAME} "GuzalAida.c")
-target_link_libraries(${PROJECT_NAME} PRIVATE)
+target_link_libraries(${PROJECT_NAME} PRIVATE pthread)
